Mnemosyne 2.2.1 : 2013-04-15

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-The premade cards from the old 1.x website have now all been converted to the
 new 2.x cards format and put on the new website. This will make importing
 much easier, as graphics are bundled (thanks to Patrick Kenny for the
 conversion).
-For txt import, a text file can now contain a fourth column which will be
 mapped to the 'notes' field of a Vocabulary card.
-When editing or browsing cards, don't reset the state of the scheduler such
 that you need to press 'show answer' again or such that a new card appears
 (reported by Gnome).
-Remember which tags where expanded/collapsed in the tag tree (requested a.o
 by Troy Guze).
-Correctly update flag 'hide pronunciation' in the popup menu (reported by
 Tom Cato Amundsen).
-When merging duplicate cards, merge tags also (requested by Stephan Maseizik).
-Fix regression where all the dialogs would have generic names ('mnemosyne')
 as opposed to e.g. 'Add cards'.
-Correctly format clozes in latex, e.g. [Lorentz force law]
 <$>[\mathbf{F}]=[q]([\mathbf{E}]+[\mathbf{v}\times\mathbf{B}]</$>
 ()requested by acdenh). If you want literal [] in latex, use \left[
 and \right].
-Fix crash when converting multiple cards at the same time between e.g.
 Vocabulary card type and Map card type (reported by Gnome).
-No longer allow mass converting of cards to Cloze card types, as this
 requires editing of the card content for each card anyhow (reported by Scott
 Youngman).
-Fix browser crash occuring after deleting a card type which had custom
 formatting (reported by Tom Zerlau).
-Unless the 'Prefill tag behaviour' plugin is active, changing card types will
 never change the tag you already filled in, even if it's different from the
 last used tag (reported by Gnome).
-When changing the font for '<all card types>', make a more neutral choice